--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/stripe-js": "5.5.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.16.3",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
